# Herobot_Backup

./: herobotcall  playsiren  rosbridgetest.py  socket_to_gui.py  socket_to_pj.py  vesc.yaml
build-keyboard_teleop-ROS-Default/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  keyboard_teleop.cbp
build-keyboard_teleop-ROS-Default/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
build-keyboard_teleop-ROS-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-keyboard_teleop-ROS-Default/catkin_generated/installspace/: keyboard_teleop.pc  keyboard_teleopConfig.cmake
build-keyboard_teleop-ROS-Default/devel/: .catkin
build-keyboard_teleop-ROS-Default/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
build-keyboard_teleop-ROS-Default/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
darknet_ros/darknet_ros/config/: yolov3-tiny-custom.yaml  yolov4-custom.yaml  yolov4.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
emergency/: CMakeLists.txt  package.xml
emergency/include/: emergency.h
emergency/launch/: emergency.launch
emergency/src/: emergency.cpp
hand_made/Dijkstra/: CMakeLists.txt.user.45337cf
hand_made/Dijkstra/include/: dijkstra.h
hand_made/Dijkstra/path/: 11-9.txt  12-14.txt  13-11.txt  14-16.txt  15-13.txt  17-15.txt  18-20.txt  2-4.txt  22-24.txt  23-21.txt  24-30.txt  27-25.txt  3-1.txt  31-29.txt  5-3.txt  7-5.txt  8-10.txt  9-7.txt
hand_made/Dijkstra/rviz/: dijkstra.rviz
hand_made/build-local_path-ROS-Debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  local_path.cbp
hand_made/build-local_path-ROS-Default/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  local_path.cbp
hector_slam/hector_mapping/: CMakeLists.txt.user.45337cf
keyboard_teleop/: CMakeLists.txt
keyboard_teleop/src/: keyboard_teleop.cpp
navigation/maps/: mymap_5.yaml
next_goal/: CMakeLists.txt  package.xml
next_goal/include/: next_goal.h
next_goal/launch/: cmd_vel_to_ackermann_drive.launch  next_goal.launch
next_goal/src/: next_goal.cpp  next_goal3.cpp  next_goal_ctrack.cpp  safety_controller_to_ackermann_drive.py
ros_server/: CMakeLists.txt  package.xml
ros_server/scripts/: chatbotServerMain.py  serverConnectionSubThread.py  serverSocketMainThread.py
safety_controller_to_ackermann_drive/: CMakeLists.txt  package.xml
safety_controller_to_ackermann_drive/launch/: safety_controller_to_ackermann_drive.launch
turtlebot3/turtlebot3_navigation/: CMakeLists.txt
yolov5-master/: detect.py  requirements.txt
(+99 files in other folders)
